--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -2,9 +2,12 @@
 {% load static %}
 {% load bag_tools %}
 
+<!-- 
+    Entire code written following Code Institutes Boutique Ado project
+    https://github.com/ckz8780/boutique_ado_v1
+-->
 {% block content %}
 <div class="container-fluid products-baner ">
-    <!--container mb-2-->
     <div class="row">
         <div class="col my-auto">
             <hr class="w-25 hr-heading-beige">
