--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -5,7 +5,10 @@
 <link rel="stylesheet" href="{% static 'checkout/css/checkout.css' %}">
 {% endblock %}
 
-<!-- Entire code written following Code Institutes Boutique Ado project -->
+<!-- 
+    Entire code written following Code Institutes Boutique Ado project
+    https://github.com/ckz8780/boutique_ado_v1
+-->
 
 {% block content %}
 <div class="container-fluid products-baner ">
@@ -65,11 +68,16 @@
                     <div class="row">
                         <div class="col-12 col-md-4">
                             <p class="small mb-0 text-black bold">
-                                {{ item.product.name }}{% if item.product.size %} - Size {{ item.product.size|upper }}{% endif %}
+                                {{ item.product.name }}
+                                {% if item.product.size %} 
+                                    - Size {{ item.product.size|upper }}
+                                {% endif %}
                             </p>
                         </div>
                         <div class="col-12 col-md-8 text-md-right">
-                            <p class="small mb-0">{{ item.quantity }} @ ${{ item.product.price }} each</p>
+                            <p class="small mb-0">
+                                {{ item.quantity }} @ ${{ item.product.price }} each
+                            </p>
                         </div>
                     </div>
                     {% endfor %}
@@ -194,7 +202,8 @@
                         <span class="text-uppercase">Back to Profile</span>
                     </a>
                 {% else %}
-                    <a href="{% url 'products' %}?category=new_arrivals" class="btn btn-black rounded-0 my-2">
+                    <a href="{% url 'products' %}?category=new_arrivals" 
+                        class="btn btn-black rounded-0 my-2">
                         <span class="icon mr-2">
                             <i class="fas fa-store-alt"></i>
                         </span>
