Added link to Home about futureretro text

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -52,7 +52,7 @@
                     Frälsningsarmén och Blocket. It is my own interpretation of the timeless femininity of this
                     era and is intended for women in all walks of life: from the businesswoman to the stay-at-home
                     mom. Every woman deserves to feel feminine and beautiful!
-                    <a class="update-link text-info" href="#">For more information about FutureRetro click here!</a>
+                    <a class="update-link text-info" href="{% url 'about' %}">For more information about FutureRetro click here!</a>
                 </p>
                 <p class="text-center">
                     Love,
