Home app clean up

--- a/home/templates/home/about.html
+++ b/home/templates/home/about.html
@@ -21,17 +21,19 @@
         <div class="row justify-content-center">
             <div class="col-12 col-md-8">
                 <p class="text-center">
-                    The FutureRetro is a clothing company created by Erica Johnsson, the FutureRetro customer
-                    is a modern-day woman who wants the classic and feminine silhouette of the 1940s-50s while
-                    remaining modern feel. The FutureRetro girl tends to dress a little bit conservatively, but
+                    The FutureRetro is a clothing company created by Erica Johnsson,
+                    the FutureRetro customer is a modern-day woman who wants the classic
+                    and feminine silhouette of the 1940s-50s while remaining modern feel. 
+                    The FutureRetro girl tends to dress a little bit conservatively, but
                     the different items can be integrated into every girl's closet!
                 </p>
                 <p class="text-center">
-                    Every single item created is a one-of-a-kind, ’40-’50s inspired piece that is designed and
-                    hand-sewn by me, with fabrics and supplies from three local second-hand stores: Myrorna,
-                    Frälsningsarmén och Blocket. It is my own interpretation of the timeless femininity of this
-                    era and is intended for women in all walks of life: from the businesswoman to the stay-at-home
-                    mom. Every woman deserves to feel feminine and beautiful!
+                    Every single item created is a one-of-a-kind, ’40-’50s inspired piece
+                    that is designed and hand-sewn by me, with fabrics and supplies from 
+                    three local second-hand stores: Myrorna, Frälsningsarmén och Blocket. 
+                    It is my own interpretation of the timeless femininity of this era and 
+                    is intended for women in all walks of life: from the businesswoman to 
+                    the stay-at-home mom. Every woman deserves to feel feminine and beautiful!
                 </p>
                 <p class="text-center">
                     Love,
@@ -56,19 +58,26 @@
         <div class="row justify-content-center">
             <div class="col-12 col-md-8">
                 <p class="text-center">
-                    <!-- Copied from: https://www.futurelearn.com/info/courses/sustainable-fashion/0/steps/13558 -->
-                    FutureRetro is excited to start upcycling. Upcycling is an approach to design where you transform 
-                    by-products, waste or disused materials or products into something new of better quality 
-                    and greater value. By reusing materials that already exist, you are saving energy, water, 
-                    chemicals and other resources required to make new virgin materials.
+                    <!-- Copied from: 
+                        https://www.futurelearn.com/info/courses/sustainable-fashion/0/steps/13558
+                     -->
+                    FutureRetro is excited to start upcycling. Upcycling is an approach to design 
+                    where you transform by-products, waste or disused materials or products into 
+                    something new of better quality and greater value. By reusing materials that 
+                    already exist, you are saving energy, water, chemicals and other resources 
+                    required to make new virgin materials.
                 </p>
                 <p class="text-center">
-                    <!-- Copied from: https://www.futurelearn.com/info/courses/sustainable-fashion/0/steps/13558 -->
-                    This may seem like a common sense approach to design but even the smallest design choices 
-                    can impact how long a product’s life will last. There are many reasons that people discard clothing 
-                    – not the right fit, the person changes size, the fabric quality or the style becomes uncool. 
-                    The best way you can keep your products from going to landfill is by designing to last, to be 
-                    cared for and repaired, to be reused or to be passed on to others. This is our moto here at FutureRetro!
+                    <!-- Copied from: 
+                        https://www.futurelearn.com/info/courses/sustainable-fashion/0/steps/13558 
+                    -->
+                    This may seem like a common sense approach to design but even the smallest 
+                    design choices can impact how long a product’s life will last. There are 
+                    many reasons that people discard clothing – not the right fit, the person 
+                    changes size, the fabric quality or the style becomes uncool. The best way 
+                    you can keep your products from going to landfill is by designing to last, 
+                    to be cared for and repaired, to be reused or to be passed on to others. 
+                    This is our moto here at FutureRetro!
                 </p>
             </div>
         </div>
