--- a/products/templates/products/add_product.html
+++ b/products/templates/products/add_product.html
@@ -1,11 +1,13 @@
 {% extends "base.html" %}
 {% load static %}
 
-<!-- Entire code written following Code Institutes Boutique Ado project -->
+<!-- 
+    Entire code written following Code Institutes Boutique Ado project
+    https://github.com/ckz8780/boutique_ado_v1
+-->
 
 {% block content %}
 <div class="container-fluid products-baner ">
-    <!--container mb-2-->
     <div class="row">
         <div class="col my-auto">
             <hr class="w-25 hr-heading-beige">
@@ -17,7 +19,8 @@
     <div class="container">
         <div class="row">
             <div class="col-12 col-lg-6 offset-lg-3">
-                <form method="POST" action="{% url 'add_product' %}" class="form mb-2" enctype="multipart/form-data">
+                <form method="POST" action="{% url 'add_product' %}" 
+                        class="form mb-2" enctype="multipart/form-data">
                     {% csrf_token %}
                     {{ form | crispy }}
                     <div class="text-right">
