Changed hr styling accross website

--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -10,9 +10,8 @@
 <div class="container-fluid products-baner ">
     <div class="row">
         <div class="col my-auto">
-            <hr class="w-25 hr-heading-beige">
             <h2 class="logo-font text-center">Your Bag</h2>
-            <hr class="w-25 hr-heading-beige">
+            <hr class="w-25 hr-heading-mauve">
         </div>
     </div>
     <div class="container">
