--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -17,7 +17,7 @@
         <div class="col my-auto">
             <hr class="w-25 hr-heading-beige">
             <h2 class="logo-font text-center">Checkout</h2>
-            <hr class="w-25 hr-heading-beige">
+            <hr class="w-25 hr-heading-green">
         </div>
     </div>
     <div class="container">
