--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -15,9 +15,9 @@
     <!--container mb-2-->
     <div class="row">
         <div class="col my-auto">
-            <hr class="w-25 hr-heading-beige">
+            <hr class="w-25 hr-heading-green">
             <h2 class="logo-font text-center">Thank you!</h2>
-            <hr class="w-25 hr-heading-beige">
+            <hr class="w-25 hr-heading-yellow">
         </div>
     </div>
     <div class="container">
