--- a/home/templates/home/about.html
+++ b/home/templates/home/about.html
@@ -5,9 +5,9 @@
 <div class="container-fluid products-baner">
     <div class="row">
         <div class="col my-auto">
-            <hr class="w-25 hr-heading-beige">
+            <hr class="w-25 hr-heading-green">
             <h2 class="logo-font text-center">About FutureRetro</h2>
-            <hr class="w-25 hr-heading-beige">
+            <hr class="w-25 hr-heading-green">
         </div>
     </div>
 </div>
