--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -5,7 +5,7 @@
 <div class="container-fluid products-baner">
     <div class="col my-auto">
         <h2 class="logo-font text-center">Product Detail</h2>
-        <hr class="hr-heading-beige w-25">
+        <hr class="hr-heading-pink w-25">
     </div>
     <div class="row">
         <!--d-flex justify-content-center = previous extra code-->
