--- a/products/templates/products/rating_products.html
+++ b/products/templates/products/rating_products.html
@@ -11,9 +11,9 @@
     <!--container mb-2-->
     <div class="row">
         <div class="col my-auto">
-            <hr class="w-25 hr-heading-beige">
+            <hr class="w-25 hr-heading-yellow">
             <h2 class="logo-font text-center">Rating Products</h2>
-            <hr class="w-25 hr-heading-beige">
+            <hr class="w-25 hr-heading-mauve">
             <h5 class="text-muted text-center">Share your thoughts!</h5>
         </div>
     </div>
