--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -39,7 +39,7 @@
         <h1 class="logo-font text-black text-center">About<br>FutureRetro</h1>
         <div class="row justify-content-center">
             <div class="col-12 col-md-8">
-                <hr class="w-25 hr-heading-beige">
+                <hr class="w-25 hr-heading-blue">
                 <p class="text-center">
                     The FutureRetro is a clothing company created by Erica Johnsson, the FutureRetro customer
                     is a modern-day woman who wants the classic and feminine silhouette of the 1940s-50s while
@@ -75,7 +75,7 @@
         <div class="row h-100 d-flex justify-content-center">
             <div class="col-7 col-md-6 my-auto">
                 <h1 class="logo-font text-black text-center pt-3">New Releases</h1>
-                <hr class="w-25 hr-heading-beige p-2">
+                <hr class="w-25 hr-heading-yellow p-2">
                 
             </div>
         </div>
@@ -112,7 +112,7 @@
 <div class="home-page-item">
     <div class="container">
         <h1 class="logo-font text-black text-center pt-3">Instagram</h1>
-        <hr class="w-25 hr-heading-beige">
+        <hr class="w-25 hr-heading-pink">
         <ul class="juicer-feed instagram-feed" data-feed-id="futureretro_store" data-per="3" data-gutter="10"
             style="colors">
             <h1 class="referral"><a href="https://www.juicer.io">Powered by Juicer.io</a></h1>
